# mima

./: CLAUDE.md  pyproject.toml
src/mima/: __init__.py  main.py
src/tooba/: __init__.py  main.py
