[project]
name = "mima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mikael Brockman", email = "mikael@brockman.se" }
]
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9.0",
    "fastapi[standard]>=0.115.13",
    "tagflow>=0.12.0",
    "uvicorn>=0.34.3",
]

[project.scripts]
mima = "mima:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
